added all patron pages and updated readme